<resources>
    <string name="app_name">DriveSafe</string>
    <string name="error_message">Failed to get results. Please try again.</string>
    <string name="no_results_message">No results. Please try again.</string>
    <string name="nothing_entered">No beer entered, nothing to search for.</string>
    <string name="no_description">No description available</string>
    <string name="hint_name_of_beer">Name of your beer</string>
    <string name="add_beer">Add Beer</string>
    <string name="add">ADD</string>
    <string name="search">Search</string>
    <string name="description_quantity_et">Volume in cl</string>
    <string name="title_settings_activity">Settings</string>
    <string name="title_add_beer_activity">Add beer</string>
    <string name="title_detail_activity">Detail</string>
    <string name="bdb_name_key" translatable="false">name</string>
    <string name="bdb_abv_key" translatable="false">abv</string>
    <string name="bdb_description_key" translatable="false">description</string>

    <!-- Strings related to Preferences -->
    <string name="pref_weight_label">Weight In Kilogram</string>
    <string name="pref_weight_default">74</string>
    <string name="pref_weight_key">weight</string>

    <string name="pref_height_label">Height In Centimeter</string>
    <string name="pref_height_default">185</string>
    <string name="pref_height_key">height</string>

    <string name="pref_units_label">Alcohol Percentage Units</string>
    <string name="pref_units_default">abv</string>
    <string name="pref_units_abv">abv</string>
    <string name="pref_units_label_abv">ABV</string>
    <string name="pref_units_percentage">percentage</string>
    <string name="pref_units_label_percentage">Percentage</string>
    <string name="pref_units_key">units</string>

    <string name="pref_gender_label">Gender</string>
    <string name="pref_gender_default">male</string>
    <string name="pref_gender_male">male</string>
    <string name="pref_gender_label_male">Male</string>
    <string name="pref_gender_female">female</string>
    <string name="pref_gender_label_female">Female</string>
    <string name="pref_gender_key">gender</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
